2002-07-13  Sam Steingold  <sds@gnu.org>

	fixed bug [ 514741 ]: ldap bugs (describe, dir-key-info)
	* describe.lisp (describe-object): handle DIR-KEY

2002-07-12  Sam Steingold  <sds@gnu.org>

	reverted the last patch wrt bindings (it broke lots of stuff)
	* control.d: reverted
	* eval.d (progv): reverted
	* compiler (bind-check-lock): removed
	(set-check-lock): use SYMBOL-VALUE-LOCK
	(c-LET/LET*, c-MULTIPLE-VALUE-BIND): reverted
	* package.d (SYMBOL-VALUE-LOCK): new function
	* subr.d, constsym.d (symbol_value_lock): ditto

2002-07-11  Sam Steingold  <sds@gnu.org>

	extended package locking to assignments and bindings
	* compiler.lisp (set-check-lock, bind-check-lock): new functions
	(c-SETQ, c-PSETQ, c-MULTIPLE-VALUE-SETQ): use SET-CHECK-LOCK
	(c-LET/LET*, c-MULTIPLE-VALUE-BIND): use BIND-CHECK-LOCK
	* package.d (symbol_value_check_lock): new function
	* lispbibl.d (symbol_value_check_lock): declare
	* control.d (LET, LET*, COMPILER-LET): use it
	* eval.d (progv, setq): ditto

2002-07-11  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 580090 ]: unbound SYSTEM::*COMPILING-FROM-FILE*
	error on (lambda () (defmethod ...))
	* init.lisp (%expand-form): when evaluating (EVAL-WHEN (COMPILE))
	bind COMPILER::*COMPILING-FROM-FILE* to nil

2002-07-10  Sam Steingold  <sds@gnu.org>

	* spvw.d (quit): call done_win32()

2002-07-09  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file): do not clobber *.c file when
	there are no FFI forms

2002-07-09  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (read): added commas before
	arguments in backquote

2002-07-09  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): consider the situation FUNCTIONALP
	when start==end, this fixes the "(finalize TAB" bug)

2002-07-09  Sam Steingold  <sds@gnu.org>

	* pathname.d (PARSE-NAMESTRING): barf on symbols when
	CUSTOM:*PARSE-NAMESTRING-ANSI* is non-NIL
	(FILE-STAT-INTERNAL): use coerce_pathname()

2002-07-08  Sam Steingold  <sds@gnu.org>
