@@ -1,5 +1,12 @@
 2002-07-13  Sam Steingold  <sds@gnu.org>
 
+	ported DIR-KEY to cygwin32
+	* dirkey1.lisp (dir-key): export
+	* dirkey.d (to_time_t_): stole fron cygwin sources
+	* constsym.d (Kwin32) [UNIX_CYGWIN32 DIR_KEY]: define
+
+2002-07-13  Sam Steingold  <sds@gnu.org>
+
 	fixed bug [ 514741 ]: ldap bugs (describe, dir-key-info)
 	* describe.lisp (describe-object): handle DIR-KEY
 
